--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "p5": "^1.11.8"
+  },
   "devDependencies": {
+    "@types/p5": "^1.7.6",
     "typescript": "~5.8.3",
     "vite": "^7.0.4"
   }
